--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css" class="style">
   <title>Frontend Mentor | 3-column preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -24,6 +24,7 @@
           Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
           or on your next road trip.
         </p>
+
         <button>Learn More</button>
       </section>
       <section class="preview-card__column preview-card__column--suv">
